--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -313,7 +313,8 @@
 										events.logOff();
 										events.infoChanged();
 										mui.fire(plus.webview.getLaunchWebview(), 'login');
-										plus.webview.getLaunchWebview().show();
+										closeRegister();
+										mui.back();
 									} else if(tempFlag == 1) { //在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
@@ -353,7 +354,9 @@
 										//跳转到登录界面
 										//										events.openNewWindowWithData('../../html/register/login.html', '');
 										mui.fire(plus.webview.getLaunchWebview(), 'quit');
-										plus.webview.getLaunchWebview().show();
+										closeRegister(1);
+										mui.back();
+//										plus.webview.getLaunchWebview().show('slide-in-right', 250);
 									}
 								}
 							});
@@ -367,11 +370,28 @@
 				events.addTap('cancelBtn', function() {
 					document.activeElement.blur();
 					console.log('点击取消按钮');
+					events.logOff();
+					events.infoChanged();
 					//					events.openNewWindowWithData('../index/index.html', 'login');
 					mui.fire(plus.webview.getLaunchWebview(), 'login');
-					plus.webview.getLaunchWebview().show();
+					closeRegister();
+					mui.back();
+//					plus.webview.getLaunchWebview().show('slide-in-right', 250);
 				});
 			});
+			/**
+			 * 设置 退出登录类型
+			 * @param {Object} quitType 0 为设置 1为退出时设置
+			 */
+			var closeRegister=function(quitType){
+				if(quitSet){
+					plus.webview.getWebviewById("setting.html").close();
+					return;
+				}
+				plus.webview.getWebviewById("register_phoneNumber.html").close();
+				plus.webview.getWebviewById("yanZhengMa.html").close();
+				plus.webview.getWebviewById("login.html").close();	
+			}
 			//将界面的数据显示清除
 			var clearData = function() {
 				phoneNumber.value = '';
