版本升级模块

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -60,10 +60,13 @@
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script src="../../js/utils/events.js"></script>
+	<script src="../../js/utils/app-update.js"></script>
+		<script type="text/javascript" src="../../js/utils/Statusbar.js"></script>
 	<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/publicHomeworkProtocol.js"></script>
-	<script type="text/javascript" src="../../js/index.js"></script>
 	<script src="../../js/main/slide_navigation.js"></script>
-	<script type="text/javascript" src="../../js/utils/Statusbar.js"></script>
+	<script type="text/javascript" src="../../js/index.js"></script>
+	
+
 
 </html>
