修改登录逻辑

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -498,15 +498,11 @@ none; margin-top: -15px;">登录</button>
 									}
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 									console.log('登录保存的个人信息：' + JSON.stringify(data.RspData));
-									//
+									//退出 界面更新
 									events.logOff();
 									events.infoChanged();
-									//存储自动登录
-									//									loginInfo.auto = 1;
-									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
-//									events.openNewWindow('../index/index.html', 'login');
 									mui.fire(plus.webview.getLaunchWebview(), 'login');
-//									plus.webview.getLaunchWebview().show('slide-in-right', 250);
+									events.hidePagesExIndex();
 									mui.back();
 								}
 							});
