--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -384,6 +384,7 @@
 			 * @param {Object} quitType 0 为设置 1为退出时设置
 			 */
 			var closeRegister=function(quitType){
+				events.hidePagesExIndex();
 				if(quitType){
 					plus.webview.getWebviewById("setting.html").close();
 					return;
