--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -39,8 +39,8 @@
 		</header>
 
 		<!--底部选项卡（.mui-bar-tab）-->
-		<nav id="nav_tab" class="mui-bar mui-bar-tab ">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="../cloud/cloud_home.html">
+		<nav id="nav_tab" class="mui-bar mui-bar-tab">
+			<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan1"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
