--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -30,7 +30,7 @@
 		<nav id="alertBar" class="mui-bar mui-bar-tab" style="visibility: hidden;height: 60px;">
 			<hr style="margin-top: -1px; height:1px;border:none;border-top:1px solid #ededed;" />
 			<div align="center" style="margin-top: -5px;">
-				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 2px;width: 95%;background-color: #00a5e0;border-color:#00a5e0 ;height: 40px">一键提醒</button>
+				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 2px;width: 95%;background-color: #00a5e0;border-color:#00a5e0 ;height: 40px;font-size:16px;letter-spacing: 1px;">一键提醒</button>
 			</div>
 		</nav>
 		<div class="mui-content mui-scroll-wrapper" style="background-color: white;">
