--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -25,10 +25,10 @@
 
 	</head>
 
-	<body>
+	<body  style="background-color: #f2f3f5;">
 
 		<!--下拉刷新容器-->
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" >
 			<div class="mui-scroll">
 				<!--数据列表-->
 				<ul class="mui-table-view">
