--- a/JiaoBaoYun-hb/html/show/add-comment.html
+++ b/JiaoBaoYun-hb/html/show/add-comment.html
@@ -12,16 +12,16 @@
 
 	</head>
 
-	<body style="background-color: white">
+	<body style="background-color: #F2F3F5">
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left "></a>
 			<h1 id="title" class="mui-title">评论</h1>
 			<a id="btn-reply" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">发布</a>
 		</header>
 		<div class="mui-content">
-			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>
-			<div class="input-content">
-				<textarea id="msg-content" placeholder="评论（字数不超过200字）"></textarea>
+			<!--<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>-->
+			<div class="input-content" style="background-color: #F2F3F5">
+				<textarea id="msg-content" placeholder="评论（字数不超过200字）" style="border: none;padding: 15px;"></textarea>
 
 			</div>
 
