--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_0.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_0.html
@@ -6,10 +6,9 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="author" content="莫尚霖,email:444811716@qq.com" />
-		<meta name="description" content="点到记事班级历史记录" />
+		<meta name="description" content="点到记事班级历史记录和统计详情" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<!--<link rel="stylesheet" href="../../css/mui.picker.min.css" />-->
 		<link rel="stylesheet" href="../../css/utils/pullToRefresh.css" />
 		<link rel="stylesheet" href="../../css/utils/preview.css" />
 		<style>
@@ -27,9 +26,6 @@
 				font-size: 15px;
 				word-break: break-all;
 			}
-			/*.mui-table-view-cell.mui-active {*/
-			/*background-color: white*/
-			/*}*/
 
 			.mui-table-view:before {
 				height: 0px;
@@ -117,7 +113,7 @@
 				white-space: normal !important;
 				text-overflow: ellipsis;
 				word-wrap: break-word;
-				-webkit-line-clamp: 3;
+				-webkit-line-clamp: 4;
 				-webkit-box-orient: vertical;
 			}
 
@@ -126,18 +122,23 @@
 				color: #CCCCCC;
 				font-size: 14px;
 			}
+
+			.statistics-publisher {
+				/*统计详情发布者*/
+				color: #13b7f6;
+			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title">历史记录</h1>
+			<h1 id="title" class="mui-title"></h1>
 		</header>
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper mui-fullscreen" style="z-index: 1;">
 			<div class="mui-scroll">
-				<div id="data_scroll">
+				<div id="data_table">
 				</div>
 			</div>
 		</div>
@@ -148,26 +149,52 @@
 		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
-
-		<!--<script type="text/javascript" src="../../js/mui.picker.min.js" ></script>-->
 		<script type="text/javascript">
-			mui.init({
-				gestureConfig: {
-					doubletap: true,
-				}
-			});
 			var previewImage; //查看图片的控件
 			var pullRefresh; //下拉，上拉控件
 			var main; //获取当前窗体对象
 			var mainData; //接收A页面传入参数值
 			var markDate = ''; //记录日期
+			var page; //记录页数
 			var myDate = new Date();
-			var year = myDate.getFullYear(); //今年
+			var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+			var publisherNick = {}; //记录发布者的昵称
+			publisherNick[personal.utid] = personal.unick;
+
+			mui.init({
+				gestureConfig: {
+					doubletap: true,
+				}
+			});
 			mui.plusReady(function() {
-				previewImage = mui.previewImage();
+				initData();
+				initControl();
+				initListener();
+				//获取数据
+				requestData(1);
+			});
+
+			/**
+			 * 初始化数据
+			 */
+			function initData() {
 				main = plus.webview.currentWebview(); //获取当前窗体对象
 				mainData = main.data; //接收A页面传入参数值
 				console.log(main.id + ' ' + JSON.stringify(mainData));
+				var title = document.getElementById("title")
+				if(mainData.type == 'history') {
+					title.innerText = '历史记录';
+				} else if(mainData.type == 'statistics') {
+					title.innerText = '统计详情';
+				}
+			}
+
+			/**
+			 * 初始化控件
+			 */
+			function initControl() {
+				previewImage = mui.previewImage();
+
 				var deceleration = mui.os.ios ? 0.003 : 0.0009;
 				mui('.mui-scroll-wrapper').scroll({
 					bounce: false,
@@ -180,10 +207,7 @@
 					down: {
 						callback: function() {
 							var self = this;
-							var element = document.getElementById('data_scroll');
-							var page = JSON.parse(element.getAttribute('data-page'));
-							console.log('down ' + JSON.stringify(page));
-							getClassHistory(1, 10);
+							requestData(1);
 							setTimeout(function() {
 								//获取数据
 								self.endPullDownToRefresh(); //结束下拉刷新
@@ -194,28 +218,27 @@
 						contentinit: '', //默认没有更多显示空白
 						callback: function() {
 							var self = this;
-							var element = document.getElementById('data_scroll');
-							var page = JSON.parse(element.getAttribute('data-page'));
-							console.log('up ' + JSON.stringify(page));
 							if(page) {
-								getClassHistory(page.pageIndex + 1, 10);
+								requestData(page.pageIndex + 1);
 							} else {
 								mui.toast('数据异常，请下拉刷新后重新尝试');
 							}
 						}
 					}
 				});
+			}
 
-				//获取数据
-				getClassHistory(1, 10);
-
+			/**
+			 * 初始化监听
+			 */
+			function initListener() {
 				//点击图片的数字
-				mui('#data_scroll').on('tap', '.record-picture-num', function() {
+				mui('#data_table').on('tap', '.record-picture-num', function() {
 					previewImage.open(document.getElementById("img_" + this.getAttribute('data-id')))
 				});
 
 				//显示全部，收起
-				mui('#data_scroll').on('tap', '.show-all', function() {
+				mui('#data_table').on('tap', '.show-all', function() {
 					var str = this.innerText;
 					var id = this.id.replace('_show', '');
 					var content = document.getElementById(id + "_content");
@@ -242,73 +265,41 @@
 					var scrollTop = mui('#pullrefresh').scroll(); //话题列表区域
 					scrollTop.scrollTo(0, 0, 100);
 				});
-			});
+			}
 
 			/**
 			 * 获取针对某班的点到记事列表
 			 * @param {Object} pageIndex 当前页数
-			 * @param {Object} pageSize 每页记录数
 			 */
-			function getClassHistory(pageIndex, pageSize) {
-				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-				//66.（点到记事）获取针对某班的点到记事列表
-				//所需参数
-				var comData = {
-					classId: mainData.gid, //班级ID
-					pageIndex: pageIndex, //当前页数
-					pageSize: pageSize, //每页记录数
-					publisherId: personalUTID //发布者ID,0代表全部
-				};
+			function requestData(pageIndex) {
 				var wd = events.showWaiting();
-				postDataPro_getNotesForClass(comData, wd, function(data) {
-					console.log('66 获取针对某班的点到记事列表 getNotesForClass ' + JSON.stringify(data));
-					//记录页数
-					var page = {
+				if(mainData.type == 'history') {
+					//66.（点到记事）获取针对某班的点到记事列表
+					var comData = {
+						classId: mainData.gid, //班级ID
 						pageIndex: pageIndex, //当前页数
-						totalPage: 0 //总页数
+						pageSize: 10, //每页记录数
+						publisherId: personal.utid //发布者ID,0代表全部
 					};
-					if(data.RspCode == 0) {
-						page.totalPage = data.RspData.TotalPage;
-					}
-					document.getElementById('data_scroll').setAttribute('data-page', JSON.stringify(page))
-					if(pageIndex == 1) { //下拉刷新或者获取的第一页的内容
-						//清空对应的界面
-						document.getElementById('data_scroll').innerHTML = '';
-						markDate = ''; //日期
-					} else { //上拉加载更多
-						pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
-					}
-
-					if(data.RspCode == 0) {
-						var tempRspData = data.RspData.Data;
-						//生成界面
-						for(var i = 0; i < tempRspData.length; i++) {
-							mui.extend(tempRspData[i], mainData.qunDataInfos[tempRspData[i].StudentId]);
-							createItem(tempRspData[i]);
-						}
-						//console.log(document.getElementById("data_scroll").innerHTML)
-
-						if(data.RspData.Data.length == 0 && pageIndex == 1) {
-							mui.toast('班级历史记录为空');
-						}
-					} else {
-						mui.toast(data.RspTxt);
-					}
-					console.log('page ' + JSON.stringify(page));
-					if(page.pageIndex >= page.totalPage) {
-						//没有下一页
-						console.log('没有下一页');
-						pullRefresh.endPullUpToRefresh(true);
-					} else {
-						if(pageIndex == 1) {
-							//获取第一页的数据更新当前控件
-							pullRefresh.refresh(true);
-						}
-					}
-
-					wd.close();
-					events.closeWaiting();
-				});
+					postDataPro_getNotesForClass(comData, wd, function(data) {
+						console.log('66 获取针对某班的点到记事列表 getNotesForClass ' + JSON.stringify(data));
+						requestDataCallBack(pageIndex, wd, data);
+					});
+				} else if(mainData.type == 'statistics') {
+					//94.（点到记事）获取某学生的点到记事统计
+					var comData = {
+						studentId: mainData.stu.stuid, //学生ID
+						classId: mainData.gid, //班级ID
+						qryMonth: mainData.statistics.month, //查询月
+						checkType: mainData.statistics.checkType, //点到情况
+						pageIndex: pageIndex, //当前页数
+						pageSize: 10, //每页记录数
+					};
+					postDataPro_getNotesStatisticForStudent(comData, wd, function(data) {
+						console.log('94 获取某学生的点到记事统计 getNotesStatisticForStudent ' + JSON.stringify(data));
+						requestDataCallBack(pageIndex, wd, data);
+					});
+				}
 			}
 
 			/**
@@ -323,29 +314,47 @@
 				var timeItem = time[0] + ':' + time[1];
 				if(markDate != dateItem) { //新的日期
 					markDate = dateItem;
-					var element = document.createElement('ul');
-					element.className = 'mui-table-view';
-					element.id = dateItem;
+					var element_0 = document.createElement('ul');
+					element_0.className = 'mui-table-view';
+					element_0.id = dateItem;
 					var mTime = dateItem.split('-');
-					if(mTime[0] == year) { //记录是今年
+					if(mTime[0] == myDate.getFullYear()) { //记录是今年
 						mTime[0] = '';
 					} else {
 						mTime[0] = mTime[0] + '年';
 					}
 					var showTime = mTime[0] + mTime[1] + '月' + mTime[2] + '日';
-					element.innerHTML = '<div class="mui-table-view-cell history-date">' + showTime + '</div><div id="' + dateItem + '_data"></div>';
-					document.getElementById("data_scroll").appendChild(element);
+					element_0.innerHTML = '<div class="mui-table-view-cell history-date">' + showTime + '</div><div id="' + dateItem + '_data"></div>';
+					document.getElementById("data_table").appendChild(element_0);
 				}
 
-				var html_first = '<div id="' + data.TabId + '_title' + '" class="mui-media-body history-title"></div>\
-							<div class="mui-media-body mui-pull-right history-time">' + timeItem + '</div>\
-							<div id="' + data.TabId + '_content' + '" class="mui-media-body history-content ellipsis-show"></div><div id="' + data.TabId + '_show' + '" class="show-all">显示全部</div>';
-				var html_media = ''; //多媒体
-				var width = Math.ceil((document.getElementById("data_scroll").offsetWidth - 30) * 0.32);
-				var height = parseInt(width * 3 / 4);
-				var marginBottom = Math.floor((document.getElementById("data_scroll").offsetWidth - 30) * 0.02);
-				var marginRight;
+				//统计详情发布者昵称
+				var html_statistics = '';
+				if(mainData.type == 'statistics') {
+					var publisher = 'display: none;';
+					if(publisherNick[data.PublisherId]) {
+						//有发布者昵称
+						publisher = 'display: inline;'
+					}
+					html_statistics = '<div class="statistics-publisher" style="' + publisher + '">\
+										<div class="mui-pull-left">&nbsp;[</div>\
+										<div id="' + data.TabId + '_' + data.PublisherId + '_publisher" class="mui-pull-left mui-ellipsis"></div>\
+										<div>]</div>\
+									</div>';
+				}
 
+				var html_first = '<div class="mui-media-body">\
+									<div id="' + data.TabId + '_title' + '" class="history-title mui-pull-left">一二三四五六七八九十 旷课</div>\
+									<div id="' + data.TabId + '_time' + '" class="mui-pull-right history-time">' + timeItem + '</div>\
+									' + html_statistics + '\
+								</div>\
+								<div id="' + data.TabId + '_content' + '" class="mui-media-body history-content ellipsis-show"></div>\
+								<div id="' + data.TabId + '_show' + '" class="show-all">显示全部</div>';
+				var html_media = ''; //多媒体
+				var width = Math.ceil((document.getElementById("data_table").offsetWidth - 30) * 0.32);
+				var height = parseInt(width * 3 / 4);
+				var marginBottom = Math.floor((document.getElementById("data_table").offsetWidth - 30) * 0.02);
+				var marginRight;
 				var title = ''; //标题
 				var content = ''; //内容
 				if(data.EncType == 1) { //附件类型,1图片2音视频3仅文字
@@ -369,47 +378,48 @@
 							html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (height + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
 						}
 						html_1 = html_1 + '<div class="record-picture" style="width: ' + width + 'px; height: ' + height + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
-									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'))" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<' + height + '){this.style.height=\'' + height + 'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-' + width + ')/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-' + height + ')/2)+\'px\';}">\
+									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;visibility: hidden;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'));this.style.visibility=\'visible\';" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<' + height + '){this.style.height=\'' + height + 'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-' + width + ')/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-' + height + ')/2)+\'px\';};this.style.visibility=\'visible\';">\
 								</div>';
 					}
 					html_media = html_0 + html_1 + '</div>';
 				}
-				var element = document.createElement('li');
-				element.className = 'mui-table-view-cell';
+				var element_1 = document.createElement('li');
+				element_1.className = 'mui-table-view-cell';
 
-				if(data.stuname == undefined) { //
+				//统计详情
+				if(mainData.type == 'statistics') {
+					data.stuname = mainData.stu.stuname
+				}
+				if(data.stuname == undefined) {
 					data.stuname = '';
 					console.log('stuname 异常 无此人资料' + data.StudentId);
 					//console.log('createItem ' + JSON.stringify(data));
 				}
 				if(data.NoteType == 1) { //点到
-					element.innerHTML = html_first;
+					element_1.innerHTML = html_first;
 					title = data.stuname + ' ' + data.CheckTypeStr;
 					if(data.MsgContent != '') {
 						content = '说明:' + data.MsgContent;
 					}
 				} else if(data.NoteType == 2) { //记事
-					element.innerHTML = html_first + html_media;
+					element_1.innerHTML = html_first + html_media;
 					title = data.stuname;
 					content = data.MsgContent;
 				} else {
 					console.log('NoteType 异常' + data.NoteType);
-					element.innerHTML = html_first;
+					element_1.innerHTML = html_first;
 					title = data.stuname;
 					content = data.MsgContent;
 				}
 
-				document.getElementById(dateItem + '_data').appendChild(element);
+				document.getElementById(dateItem + '_data').appendChild(element_1);
 				document.getElementById(data.TabId + '_title').innerText = title;
-				if(content == '') {
-					document.getElementById(data.TabId + '_content').style.display = 'none';
-				} else {
+				if(content) {
 					var height_0;
 					var height_1;
 					var contentEl = document.getElementById(data.TabId + '_content');
 					contentEl.innerText = content;
 
-					contentEl.style.webkitLineClamp = '4';
 					height_0 = contentEl.offsetHeight;
 					contentEl.style.webkitLineClamp = '3';
 					height_1 = contentEl.offsetHeight;
@@ -418,6 +428,127 @@
 						document.getElementById(data.TabId + "_show").style.display = 'inline';
 					}
 				}
+				//统计详情显示发布者
+				if(mainData.type == 'statistics') {
+					//如果有这个人
+					if(publisherNick[data.PublisherId]) {
+						var publisherName = document.getElementById(data.TabId + '_' + data.PublisherId + '_publisher');
+						var title_width = document.getElementById(data.TabId + '_title').offsetWidth;
+						var time_left = document.getElementById(data.TabId + '_time').offsetLeft;
+						var width = Math.floor(time_left - 30 - title_width);
+						publisherName.style.maxWidth = width + 'px';
+						publisherName.innerText = publisherNick[data.PublisherId];
+					}
+				}
+			}
+
+			/**
+			 * 请求数据后的回调
+			 * @param {Object} data
+			 */
+			function requestDataCallBack(pageIndex, wd, data) {
+				//记录页数
+				page = {
+					pageIndex: pageIndex, //当前页数
+					totalPage: 0 //总页数
+				};
+				if(data.RspCode == 0) {
+					page.totalPage = data.RspData.TotalPage;
+				}
+				if(pageIndex == 1) { //下拉刷新或者获取的第一页的内容
+					//清空对应的界面
+					document.getElementById('data_table').innerHTML = '';
+					markDate = ''; //日期
+				} else { //上拉加载更多
+					pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
+				}
+
+				if(data.RspCode == 0) {
+					var tempRspData = data.RspData.Data;
+					//生成界面
+					if(mainData.type == 'history') {
+						for(var i = 0; i < tempRspData.length; i++) {
+							mui.extend(tempRspData[i], mainData.qunDataInfos[tempRspData[i].StudentId]);
+							createItem(tempRspData[i]);
+						}
+					} else if(mainData.type == 'statistics') {
+						var pubIdArray = []; //保存key
+						var pubIdOb = {}; //保存value
+						for(var i = 0; i < tempRspData.length; i++) {
+							var id = tempRspData[i].PublisherId;
+							//没有查这个人的昵称
+							if(!publisherNick[id]) {
+								//这个人没有重复
+								if(!pubIdOb[id]) { //需要查询的
+									pubIdArray[pubIdArray.length] = id;
+									pubIdOb[id] = id;
+								}
+							}
+						}
+						//获取昵称
+						getNick(pubIdArray, wd, function() {
+							for(var i = 0; i < tempRspData.length; i++) {
+								createItem(tempRspData[i]);
+							}
+							//console.log(document.getElementById("data_table").innerHTML);
+							wd.close();
+						});
+					}
+
+					if(data.RspData.Data.length == 0 && pageIndex == 1) {
+						if(mainData.type == 'history') {
+							mui.toast('班级历史记录为空');
+						} else if(mainData.type == 'statistics') {
+							mui.toast('统计详情记录为空');
+						}
+					}
+				} else {
+					mui.toast(data.RspTxt);
+				}
+				console.log('page ' + JSON.stringify(page));
+				if(page.pageIndex >= page.totalPage) {
+					//没有下一页
+					console.log('没有下一页');
+					pullRefresh.endPullUpToRefresh(true);
+				} else {
+					if(pageIndex == 1) {
+						//获取第一页的数据更新当前控件
+						pullRefresh.refresh(true);
+					}
+				}
+
+				if(mainData.type == 'history') {
+					wd.close();
+				}
+			}
+
+			/**
+			 * 获取昵称
+			 * @param {Object} utids
+			 * @param {Object} callback
+			 */
+			function getNick(utids, wd, callback) {
+				if(utids.length == 0) {
+					callback();
+					return false;
+				}
+				var utidStr = utids.join(',');
+				comData = {
+					vvl: utidStr, //用户id，查询的值,p传个人ID,g传ID串
+					vtp: 'g' //查询类型,p(个人)g(id串)
+				};
+				//21.通过用户ID获取用户资料
+				postDataPro_PostUinf(comData, wd, function(data) {
+					console.log('21 通过用户ID获取用户资料 PostUinf ' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						for(var i = 0; i < data.RspData.length; i++) {
+							publisherNick[data.RspData[i].utid] = data.RspData[i].unick;
+						}
+					} else {
+						mui.toast('查询昵称失败 ' + data.RspTxt);
+					}
+					callback();
+				});
 			}
 		</script>
 	</body>
