--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -66,7 +66,7 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 				display: -webkit-box;
-				-webkit-line-clamp: initial;
+				-webkit-line-clamp: 4;
 				-webkit-box-orient: vertical;
 				font-size: 1.4rem;
 				line-height: 20px;
@@ -174,6 +174,12 @@
 		var year = ''; //记录年份
 		var previewImage; //查看图片的控件
 		var pullRefresh; //下拉，上拉控件
+		var page; //记录页数
+		var userId = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户ID
+		var row_width = (localStorage.getItem('resolutionWidth') * 1 - 10) * 0.8 - 16;
+		var imageWidth = parseInt(row_width * 0.3);
+		var imageHeight = parseInt(imageWidth * 3 / 4);
+		var marginBottom = parseInt(row_width * 0.016);
 
 		//启用双击监听
 		mui.init({
@@ -183,34 +189,49 @@
 		});
 
 		mui.plusReady(function() {
-			previewImage = mui.previewImage();
+			var wd = events.showWaiting();
+			initData();
+			initControl();
+			initListener();
+			getNotes(1, wd);
+		});
+
+		/**
+		 * 初始化数据
+		 */
+		function initData() {
 			var main = plus.webview.currentWebview();
 			mainData = main.data;
 			console.log(main.id + ' ' + JSON.stringify(mainData));
-
+			//修改标题
 			document.getElementById("title").innerText = mainData.studentName;
 			var myDate = new Date();
 			var month = myDate.getMonth() + 1;
 			if(month.length = 1) {
 				month = '0' + month;
 			}
+			//获得今天
 			today = myDate.getFullYear() + '-' + month + '-' + myDate.getDate();
+		}
 
-			document.body.querySelector('.mui-title').innerText = mainData.studentName;
+		/**
+		 * 初始化控件
+		 */
+		function initControl() {
+			//初始化图片查看控件
+			previewImage = mui.previewImage();
 
+			//初始化下拉，上拉控件
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
 			mui('.mui-scroll-wrapper').scroll({
 				bounce: false,
-				indicators: true, //是否显示滚动条
+				indicators: true,
 				deceleration: deceleration
 			});
-			//初始化下拉，上拉控件
 			pullRefresh = mui('.mui-scroll-wrapper .mui-scroll').pullToRefresh({
 				down: {
 					callback: function() {
 						var self = this;
-						var element = document.getElementById('pullrefresh');
-						var page = JSON.parse(element.getAttribute('data-page'));
 						console.log('down ' + JSON.stringify(page));
 						getNotes(1);
 						setTimeout(function() {
@@ -221,8 +242,6 @@
 				up: {
 					callback: function() {
 						var self = this;
-						var element = document.getElementById('pullrefresh');
-						var page = JSON.parse(element.getAttribute('data-page'));
 						console.log('up ' + JSON.stringify(page));
 						if(page) {
 							getNotes(page.pageIndex + 1);
@@ -232,9 +251,12 @@
 					}
 				}
 			});
+		}
 
-			getNotes(1);
-
+		/**
+		 * 初始化监听
+		 */
+		function initListener() {
 			//资料头像修改
 			var stuImage = document.getElementById("stuImage");
 			UploadHeadImage.addListener(stuImage, 1, {
@@ -276,29 +298,25 @@
 					var scroll = mui('#pullrefresh').scroll(); //滑动控件
 					var move = scroll.y + (offsetHeight_0 - offsetHeight_1);
 					if(move >= 0) {
-						mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 0);
+						scroll.scrollTo(0, 0, 0);
 					} else {
-						mui('.mui-scroll-wrapper').scroll().scrollTo(0, move, 0);
+						scroll.scrollTo(0, move, 0);
 					}
 				}
 			});
 
 			//双击标题返回列表顶部
 			document.getElementById('title').addEventListener('doubletap', function() {
-				var scrollTop = mui('#pullrefresh').scroll(); //话题列表区域
-				scrollTop.scrollTo(0, 0, 100);
+				mui('#pullrefresh').scroll().scrollTo(0, 0, 100);
 			});
-		});
+		}
 
 		/**
 		 * 获取用户针对某学生的点到记事列表
 		 * @param {Object} pageIndex 当前页数
 		 */
-		function getNotes(pageIndex) {
-			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-			var userId = personalUTID; //用户ID
-			//4.（点到记事）获取用户针对某学生的点到记事列表
-			//所需参数
+		function getNotes(pageIndex, wd) {
+			var wd = wd || events.showWaiting();
 			var comData = {
 				userId: userId, //用户ID----utid
 				classId: mainData.classId, //班级id
@@ -307,48 +325,38 @@
 				pageSize: '10', //每页记录数
 				publisherId: '0' //发布者ID,0代表全部
 			};
-			//返回model：model_homeSchoolList,model_userNoteInfo
-			console.log('获取列表发送的数据:' + JSON.stringify(comData));
-			// 等待的对话框
-			var wd = events.showWaiting();
+			//4.（点到记事）获取用户针对某学生的点到记事列表
 			postDataPro_getNotesByUserForStudent(comData, wd, function(data) {
-				console.log('4.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-				wd.close();
-				if(data.RspCode == 0) {
-					var tempRspData = data.RspData.Data;
-					//记录页数
-					var page = {
-						pageIndex: pageIndex, //当前页数
-						totalPage: 0 //总页数
-					};
-					if(data.RspCode == 0) {
-						page.totalPage = data.RspData.TotalPage;
-					}
-					document.getElementById('pullrefresh').setAttribute('data-page', JSON.stringify(page))
-					if(page.pageIndex == 1) { //下拉刷新或者获取的第一页的内容
-						//清空对应的界面
-						document.getElementById('ul_table').innerHTML = '';
-						year = ''; //清空年份
-						markDate = ''; //清空年份
-						var comData2 = {
-							userId: userId, //用户ID----utid
-							classId: mainData.classId, //班级ID----
-							studentId: mainData.studentId //学生ID----stuid
-						};
-						var wd2 = events.showWaiting();
-						postDataPro_setNoteReadByUser(comData2, wd2, function(data2) {
-							console.log('10.90909090success:RspCode:' + data2.RspCode + ',RspData:' + JSON.stringify(data2.RspData) + ',RspTxt:' + data2.RspTxt);
-							if(data.RspCode == 0) {}
-						});
-						wd2.close();
-					} else { //上拉加载更多
-						pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
-					}
+				console.log('4 获取用户针对某学生的点到记事列表 getNotesByUserForStudent' + JSON.stringify(data));
+				//记录页数
+				page = {
+					pageIndex: pageIndex, //当前页数
+					totalPage: 0 //总页数
+				};
 
+				if(pageIndex == 1) { //下拉刷新或者获取的第一页的内容
+					//清空对应的界面
+					document.getElementById('ul_table').innerHTML = '';
+					year = ''; //清空年份
+					markDate = ''; //清空年份
+					var comData2 = {
+						userId: userId, //用户ID----utid
+						classId: mainData.classId, //班级ID----
+						studentId: mainData.studentId //学生ID----stuid
+					};
+					postDataPro_setNoteReadByUser(comData2, wd, function(data2) {
+						console.log('10 修改某用户针对某学生所有点到记事阅读状态为已读 setNoteReadByUser' + JSON.stringify(data2));
+					});
+				} else { //上拉加载更多
+					pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
+				}
+
+				if(data.RspCode == 0) {
+					page.totalPage = data.RspData.TotalPage;
+					var tempRspData = data.RspData.Data;
 					for(var i = 0; i < tempRspData.length; i++) {
 						createNotes(tempRspData[i])
 					}
-
 				} else {
 					mui.toast('获取点到记事列表:' + data.RspTxt);
 					console.log('获取用户针对某学生的点到记事列表:' + data.RspTxt);
@@ -365,6 +373,7 @@
 						pullRefresh.refresh(true);
 					}
 				}
+				wd.close();
 			});
 		}
 
@@ -374,7 +383,6 @@
 		 */
 		function createNotes(data) {
 			//console.log('createNotes ' + JSON.stringify(data));
-
 			var date = data.PublishDate.split(' '); //发布的日期和时间
 			var dateItem = date[0]; //日期
 			var time = date[0].split('-'); //时间
@@ -408,16 +416,12 @@
 			}
 
 			var html_media = ''; //多媒体
-
-			var width = Math.ceil((document.getElementById(dateItem).offsetWidth * 0.77 - 32) * 0.32);
-			var height = parseInt(width * 3 / 4);
-			var marginBottom = Math.floor((document.getElementById(dateItem).offsetWidth * 0.77 - 32) * 0.02);
 			var marginRight;
 
 			if(data.EncType == 1) { //附件类型,1图片2音视频3仅文字
 				var imageArray = data.EncAddr.split('|');
 				var thumbArray = data.EncImgAddr.split('|');
-				var html_0 = '<div class="record-imge" style="height=' + height + marginBottom + 'px' + '">';
+				var html_0 = '<div class="record-imge" style="height=' + imageHeight + marginBottom + 'px;">';
 				var html_1 = '';
 				var html_2 = ''; //显示剩余的图片数量
 				var html_3 = ''; //是否显示图片
@@ -431,10 +435,10 @@
 						html_3 = 'display: none;';
 					}
 					if(i == 2 && imageArray.length > 3) {
-						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (height + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
+						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (imageHeight + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
 					}
-					html_1 = html_1 + '<div class="record-picture" style="width: ' + width + 'px; height: ' + height + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
-									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'))" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<'+height+'){this.style.height=\'' + height + 'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-' + width + ')/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-' + height + ')/2)+\'px\';}">\
+					html_1 = html_1 + '<div class="record-picture" style="width: ' + imageWidth + 'px; height: ' + imageHeight + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
+									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;visibility: hidden;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'));this.style.visibility=\'visible\';" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<' + imageHeight + '){this.style.height=\'' + imageHeight + 'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-' + imageWidth + ')/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-' + imageHeight + ')/2)+\'px\';};this.style.visibility=\'visible\';">\
 								</div>';
 				}
 				html_media = html_0 + html_1 + '</div>';
@@ -470,8 +474,6 @@
 				var height_1;
 				var contentEl = document.getElementById(data.TabId + '_content');
 				contentEl.innerText = type + data.MsgContent;
-
-				contentEl.style.webkitLineClamp = '4';
 				height_0 = contentEl.offsetHeight;
 				contentEl.style.webkitLineClamp = '3';
 				height_1 = contentEl.offsetHeight;
