二维码扫描位置调整

--- a/JiaoBaoYun-hb/html/mine/ReadQRCode.html
+++ b/JiaoBaoYun-hb/html/mine/ReadQRCode.html
@@ -16,7 +16,7 @@
 			<h1 class="mui-title">扫描二维码</h1>
 		</header>
 		<div class="mui-content">
-			<div id="bcid" style="height: 480px;width: 320px;"></div>
+			<div id="bcid" style="position: absolute;top: 44px;left: 0px;bottom: 0px;right: 0px;"></div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
