--- a/JiaoBaoYun-hb/html/mine/apply-bycode.html
+++ b/JiaoBaoYun-hb/html/mine/apply-bycode.html
@@ -48,7 +48,12 @@
 		<script type="text/javascript">
 			var choseRole; //选择的角色
 			var groupInfo; //群组信息
-			mui.init()
+			mui.init({
+				beforeback:function(){
+					plus.webview.currentWebview().opener().close();
+					return true;
+				}
+			})
 			mui.plusReady(function() {
 				groupInfo = plus.webview.currentWebview().data;
 				console.log("获取的数据："+JSON.stringify(groupInfo))
@@ -68,7 +73,8 @@
 					}
 				})
 				document.getElementById("apply-group").addEventListener("tap", function() {
-					if(!choseRole){
+					console.log("choseRole:"+choseRole)
+					if(!(choseRole>-1)){
 						mui.toast("请选择身份！")
 						return;
 					}
@@ -92,7 +98,8 @@
 					console.log('申请入群获取的数据：' + JSON.stringify(data));
 					if(data.RspCode == '0000') {
 						mui.toast('申请成功！');
-						events.fireToPageNone('/html/mine/approval-apply.html', 'applied')
+						events.fireToPageNone('/html/mine/approval-apply.html', 'applied');
+						mui.back();
 					} else {
 						mui.toast("申请失败:" + data.RspTxt)
 					}
