扫描不是教宝中的二维码时

--- a/JiaoBaoYun-hb/html/mine/ReadQRCode.html
+++ b/JiaoBaoYun-hb/html/mine/ReadQRCode.html
@@ -71,7 +71,8 @@
 						console.log('QRCodeModel=' + JSON.stringify(QRCodeModel));
 						events.openNewWindowWithData('../mine/apply-bycode.html', QRCodeModel);
 					} else {
-						mui.toast('扫描结果为:' + result);
+//						mui.toast('扫描结果为:' + result);
+						events.openNewWindowWithData('../mine/apply-bycode1.html', result);
 					}
 				}
 			}
