调整首页背景色值

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -16,6 +16,9 @@
 		<link rel="stylesheet" href="../../css/cloud/file.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/utils/MUI-pullToRefresh.css" />
 		<style>
+			body,.mui-content{
+				background-color: #f2f3f5;
+			}
 			#topPopover {
 				position: fixed;
 				top: 10px;
