调整点到记事统计和班级历史图标

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -66,8 +66,8 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<p class="mui-title common-color-white">云盘—记事</p>
-			<a id="history" class=" mui-icon iconfont icon-lishijilu mui-pull-right" style="color: white;display:none;padding-right: 14px;"></a>
-			<div id="statistics" class="title-text-pull-right" style="margin-right: 40px;display:none;">统计</div>
+			<a id="history" class="mui-icon iconfont icon-lishijilu1 mui-pull-right" style="color: white;padding-right: 15px;display:none;"></a>
+			<a id="statistics" class="mui-icon iconfont icon-tongji mui-pull-right" style="margin-right: 5px;display:none;"></a>
 		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider" style="display:none;">
