--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -324,7 +324,8 @@
 										//										setTimeout(function(){mui.back();},2000);
 										mui.back();
 									} else if(tempFlag == 3) { //在设置里，退出时设置密码
-										events.defaultLogin(data {
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
+										events.defaultLogin(function(data) {
 											if(data.value) {
 												//退出登录
 												events.logOff();
