笔记,档案新增页面修改

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -16,11 +16,13 @@
 		<style type="text/css">
 			body,
 			.mui-content {
-				background: white;
+				background: #f2f3f5;
+				line-height: 0px;
 			}
 
 			#notes {
 				border: none;
+				border-radius: initial;
 				height: 20rem;
 				border-bottom: 1px solid lightgray;
 				margin-bottom: 0px;
@@ -38,6 +40,20 @@
 			<textarea id="notes" maxlength="2000" placeholder="✎ 分享你的学习与生活...,最多2000字"></textarea>
 			<div id="MultiMedia">
 			</div>
+			<!--<div id="_MSL_MultiMedia" style="width: 100%;">
+				<div id="MultiMedia_Body" class="multimedia-body" style=";">
+					<div id="MultiMedia_Header" class="multimedia-header" style="margin: 0px;">
+						<span id="MultiMedia_Picture_Header" class="mui-icon iconfont icon-xiangji2"></span><span id="MultiMedia_Tuku_Header" class="mui-icon iconfont icon-tuku"></span>
+						<span id="MultiMedia_Audio_Header" class="mui-icon iconfont icon-yuyin3"></span>
+						<span id="MultiMedia_Video_Header" class="mui-icon iconfont icon-shipin2"></span>
+					</div>
+					<div id="MultiMedia_Footer" class="multimedia-footer">
+						<div id="MultiMedia_Picture_Footer"></div>
+						<div id="MultiMedia_Audio_Footer"></div>
+						<div id="MultiMedia_Video_Footer"></div>
+					</div>
+				</div>
+			</div>-->
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
