--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -14,7 +14,8 @@
 		<style>
 			body,
 			.mui-content {
-				background: white;
+				background: #f2f3f5;
+				line-height: 0px;
 			}
 
 			.mui-table-view:before,
