--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -36,7 +36,7 @@
 			</ul>
 		</div>
 		<div class="mui-content" style="background-color: white;">
-			<textarea id="askTitle" name="topic" placeholder="标题（请以？号结尾,最多30字）" style="height: 40px;margin-top: 5px;border-bottom-color: #e4e4e4;"></textarea>
+			<textarea id="askTitle" name="topic" placeholder="标题（请以？号结尾,最多30字）" style="height: 40px;margin-top: 5px;border-bottom-color: #e4e4e4;overflow:hidden"></textarea>
 			<div class="input-content" style="margin-top: -20px;border-color: white;height: 20rem;">
 				<textarea id="askNote" placeholder="请输入内容（最多2000字）" style="border-color: white;height: 15rem;"></textarea>
 				<div id="take_pic" class="take_pic">
