--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -23,7 +23,7 @@
 				position: fixed;
 				top: 10px;
 				right: 6px;
-				width: 120px;
+				width: 140px;
 			}
 
 			#topPopover .mui-popover-arrow {
@@ -34,7 +34,7 @@
 
 			.mui-popover {
 				height: 80px;
-				width: 120;
+				width: 140;
 			}
 
 			#refreshContainer .mui-table-view:before,
@@ -201,10 +201,13 @@
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/share.png" />
 					<div class="mui-media-body" id="titleFlag2" style="color: #323232;">晒一晒</div>
 				</li>
-				<li id="aboutme" class="mui-table-view-cell mui-media ">
+
+				<li id="aboutme" class="mui-table-view-cell mui-media " style="height: 50px;">
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/aboutme.png" />
-					<div class="mui-media-body" id="titleFlag2" style="color: #323232;">与我相关</div>
-				</li>
+										<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;">与我相关<</div>
+
+<!--					<div class="mui-media-body  mui-pull-left" id="titleFlag2" style="color: #323232;"><span  class="mui-pull-left">与我相关</span><span id="aboutme_noRead" class="mui-badge mui-badge-danger mui-pull-left" style="margin-left: 0px;margin-top: -5px;visibility: visible;">3</span></div>
+-->				</li>
 				<li id="Scan" class="mui-table-view-cell mui-media ">
 					<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/quan/Scan.png" />
 					<div class="mui-media-body" id="titleFlag2" style="color: #323232;">扫一扫</div>
