回答无评论时显示图片和提示

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -59,6 +59,10 @@
 
 					</li>
 				</ul>
+				<div class="answer-noComment display-none" style="width: 100%;min-height: 200px;text-align: center;background-color: white;padding: 20px 0;">
+					<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="max-width: 50%; height: auto;" />
+					<p>暂无人提交评论此问题，快来评论吧~~</p>
+				</div>
 			</div>
 
 		</div>
